Added gtest library and includes. Also made changes to CMakeLists.txt to reflect that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,12 @@ set_target_properties(${This} PROPERTIES
     FOLDER Libraries
 )
 
-target_include_directories(${This} PUBLIC include)
+target_include_directories(${This} PUBLIC 
+    include
+)
 
 target_link_libraries(${This} PUBLIC
-
+    lib
 )
 
 add_subdirectory(test)
