Edited the banners 2019 -> 2020; CMake recommended improvement

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,8 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "cd /home/wis31/git_k09/jsoner/",
+            "command": "",
+            "args": [],
             "problemMatcher": [],
             "group": {
                 "kind": "build",
