--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(Sources
 
 option(BUILD_SHARED_LIBS "Build as shared library" OFF)
 
-add_library(${This} STATIC ${Sources} ${Headers})
+add_library(${This} ${Sources} ${Headers})
 set_target_properties(${This} PROPERTIES
     FOLDER Libraries
 )
