--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMakeLists.txt for JSONer
 #
-# © 2019 by Abhijit Kale (inspired by version from Richard Walters)
+# © 2020 by Abhijit Kale (inspired by version from Richard Walters)
 
 cmake_minimum_required(VERSION 3.8)
 project(Json VERSION 1.0)
@@ -9,10 +9,12 @@ set(This Json)
 
 set(Headers
     include/Json/Json.hpp
+    include/StringOps/StringOps.hpp
 )
 
 set(Sources
     src/Json.cpp
+    src/StringOps.cpp
 )
 
 option(BUILD_SHARED_LIBS "Build as shared library" OFF)
