CMake: Use appropriate gtest libraries according to the platform (Windows/Linux)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,8 +22,15 @@ target_include_directories(${This} PRIVATE
     ${Json_SOURCE_DIR}/include
 )
 
-find_library(GTEST_MAIN_LIB gtest_main HINTS ${Json_SOURCE_DIR}/lib)
-find_library(GTEST_LIB libgtest.a HINTS ${Json_SOURCE_DIR}/lib)
+# if Windows platform, use gtest libraries built for Windows
+if(WIN32)
+    find_library(GTEST_MAIN_LIB gtest_main HINTS ${Json_SOURCE_DIR}/lib/windows/)
+    find_library(GTEST_LIB libgtest.a HINTS ${Json_SOURCE_DIR}/lib/windows/)
+else()
+    find_library(GTEST_MAIN_LIB gtest_main HINTS ${Json_SOURCE_DIR}/lib)
+    find_library(GTEST_LIB libgtest.a HINTS ${Json_SOURCE_DIR}/lib)
+endif()
+
 message(STATUS "gtest_main library found at ${GTEST_MAIN_LIB}")
 message(STATUS "gtest library found at ${GTEST_LIB}")
 
